# BeaconScannerJNI

./: CMakeLists.txt  LICENSE-BLUEZ  README.md  install.sh
src/: hcidumpinternal.c  hcidumpinternal.cpp  hcidumpinternal.h  org_jboss_rhiot_beacon_bluez_HCIDump.cpp  org_jboss_rhiot_beacon_bluez_HCIDump.h  org_jboss_rhiot_ble_bluez_HCIDump.cpp  org_jboss_rhiot_ble_bluez_HCIDump.h  org_jboss_summit2015_beacon_bluez_HCIDump.cpp  parser.c  parser.h
test/: CMakeLists.txt  testAdEventInline.cpp  testBeaconBuffer.cpp  testGeneralScanner.cpp  testRHIoTTag.cpp  testRHIoTTagBuffer.cpp  testScanner.cpp
